--- a/package.json
+++ b/package.json
@@ -10,21 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@radix-ui/react-label": "^2.1.4",
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.1",
+    "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/vite": "^4.0.15",
     "@tsparticles/react": "^3.0.0",
     "aceternity-ui": "^0.2.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.5.0",
-    "motion": "^12.5.0",
+    "jquery": "^3.7.1",
+    "motion": "^12.9.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-lottie": "^1.2.10",
     "react-particles": "^2.12.2",
     "react-router-dom": "^7.4.0",
-    "tailwind-merge": "^3.0.2",
+    "react-toastify": "^11.0.5",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.0.15",
     "three": "^0.175.0",
     "three-globe": "^2.42.3",
